# PL

./: .gitattributes  .gitignore  .gitmodules  1.c  README.md  baka.c  composition.c  rewrite.sh
asm/: 1.asm  3.asm  4.asm  a.asm  b.c  first.asm  first.c  help.md  test.asm
c/: README.md  TODO.md
c/AddressBook/: main.c
c/Bit/: 1
c/BitField/: main.c
c/CSqlite/: main.c
c/Composition/: composition.c
c/Fib/: CMakeLists.txt
c/Fileio/: CMakeLists.txt
c/FuncPointer/: main.c  main.cpp
c/Game/: CMakeLists.txt
c/HidenStruct/: main.c  stu.c  stu.h
c/Json/: CMakeLists.txt
c/LinkTest/: CMakeLists.txt
c/RandomChoose/: RandomChoose.c
c/Resistor/: CMakeLists.txt
c/Snake/: README.md  snake.c  snake_linux.c  snake_linux_opt.c  snake_windows.c  snake_windows_opt.c  test copy.cpp  test.c
c/SnakeNew/: canonical_mode.h  clear.h  global_var.h  key_monitor.h  move.h  show_map.h  sleep.h  snake.c  snake.h
c/Sort/: README.md  bubble_sort.c  insertion_sort.c  merge_sort.c  merge_sort_recursive.c  test.c  (+4 more)
c/socket/unix_socket/: CMakeLists.txt  compile_commands.json  note.md
c/socket/unix_socket/include/: domain.h
c/socket/unix_socket/src/: client.c  server.c
composition/: composition.c
git/: GPGNotes.txt  GitNotes.txt  r.sh  rewrite.sh
helloworld/: CMakeLists.txt
html/: 1.html  10.html  11.html  11.js  12.html  12.js  13.css  13.html  13.js  3.html  4.html  5.html  6.html  7.css  7.html  8.html  9.css  9.html  e1.html  e2.html  e3.html  e4.html  id.css  index.css  jquery.html  sd-webui.html
sqrt/: CMakeLists.txt  README.md
string_operation/: 2.c
(+266 files in other folders)
